# FastApiUserAuth

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.sh  wait-for-postgres.sh
app/: .env  database.py  main.py  models.py  pwd_security.py  schemas.py  token_security.py
app/resources/: __init__.py  auth.py
tests/: __init__.py
tests/resources/: test_auth.py
