[tool.poetry]
name = "fastapiuserauth"
version = "0.1.0"
description = "fastapi authentication and authorization project"
authors = ["AshHarDav0 <ashot.h@plat.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
bcrypt = "^4.1.3"
pydantic = "^2.7.3"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
SQLAlchemy = "^2.0.30"
starlette = "^0.37.2"
uvicorn = "^0.30.1"
pytest = "^8.2.2"
httpx = "^0.27.0"
loguru = "^0.7.2"
cryptography = "^42.0.8"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
